# naner

./: .gitignore  .syncignore  Cmder.bat  QUICK-START-NEW-ARCHITECTURE.md  README.md  naner.bat  notes
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  testing_issue.yml
.github/workflows/: build.yml  ci.yml  test.yml
c_sharp/: CmderLauncher.csproj  Program.cs
config/: naner.json  naner.yaml  plugin-schema.json  user-settings_with_custom_profiles.json  vendors-schema.json  vendors.json  vendors.lock.example.json
docs/: CAPABILITY-ROADMAP.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  ISSUES.md  PHASE-10-NEXT-STEPS.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE4_SUMMARY.md  PHASE7_SUMMARY.md  PLUGIN-DEVELOPMENT.md  PORTABLE-GO.md  PORTABLE-NODEJS.md  PORTABLE-PYTHON.md  README.md  REFACTORING-SUMMARY.md  REFACTORING_PLAN.md  RELEASE-NOTES-v1.0.0.md  VENDOR-LOCK-FILE.md  cmder_analysis.md
docs/archived/: ARCHITECTURE-POWERSHELL.md  GUI-CONFIGURATION-MANAGER.md  IMPLEMENTATION-SUMMARY.md  LAUNCHER-COMPARISON.md  POWERSHELL-ASSESSMENT.md  REFACTORING-PHASE1-SUMMARY.md  REFACTORING-PHASE2-PLAN.md  (+5 more)
home/: .bash_aliases  .bash_profile  .bashrc  .gitconfig  .nanorc  .vimrc
home/Templates/python-cli/: README.md  pyproject.toml
home/Templates/python-cli/src/{{PROJECT_NAME}}/: __init__.py
home/Templates/python-cli/tests/: test_cli.py
naner_launcher/: .gitignore  README.md  naner.bat
og_arch/: Launch-Cmder.ps1  README.md  build.bat
plugins/: README.md
tests/: Debug-EnvTests.ps1  README.md  Run-Tests.ps1
(+333 files in other folders)
